# baremetal

./: .gdbinit  .gitmodules  CMakeLists.txt  README.md  debug.sh  openocd.cfg  program-flash.sh
STM32Cube_FW_F3_V1.11.0/: License.md  README.md  package.xml
STM32Cube_FW_F3_V1.11.0/Projects/: STM32CubeProjectsList.html
STM32Cube_FW_F3_V1.11.0/_htmresc/: ReleaseNotes.html
boards/: china_board_f103c8t6.cmake  china_board_f103c8t6_jlink.cfg  nucleo_board_f303k8t6.cmake
boards/atbrk3568jsmcbmc_stm32l071kbu6/: building.cmake  flash_stm32l071kbu6.ld  oocd_jlink.cfg  oocd_stlinkv2.cfg
boards/atbrk3568jsmcbmc_stm32l071kbu6/include/: config.h  drivers.h
boards/atbrk3568jsmcbmc_stm32l071kbu6/source/: console.c  init.c  main.c  startup_stm32l071xx.c
boards/baikalbmc_stm32f103ret6/: building.cmake  oocd_jlink.cfg  oocd_stlinkv2.cfg
boards/baikalbmc_stm32f103ret6/include/: config.h
boards/baikalbmc_stm32f103ret6/source/: console.c  init.c  main.c
boards/baikalbmc_stm32l412kbu6/: building.cmake  oocd_jlink.cfg
boards/baikalbmc_stm32l412kbu6/include/: config.h  drivers.h
boards/baikalbmc_stm32l412kbu6/source/: console.c  init.c  main.c  platform.c  startup_stm32l412xx.c
boards/bluepill_stm32f103c8t6/: building.cmake  oocd_jlink.cfg  oocd_stlinkv2.cfg
boards/bluepill_stm32f103c8t6/include/: config.h
boards/bluepill_stm32f103c8t6/source/: console.c  init.c  platform.c  startup_stm32f103xb.c
boards/checkboard_lpc54618j512/: building.cmake  flash_lpc54618j512.ld  fprog_building.cmake  fprog_lpc54618j512.ld  ftdi2232h.cfg  lpc546xx.cfg  lpc546xx_1.cfg  lpc546xx_2.cfg  oocd_ftdi2232h.cfg  oocd_jlink.cfg
boards/checkboard_lpc54618j512/flash_programmer/: CMakeLists.txt  flash_programmer.c  flash_programmer_lpc54618j512.ld
boards/checkboard_lpc54618j512/include/: adc.h  console.h  control.h  drivers.h  freq_meter.h
boards/checkboard_lpc54618j512/source/: adc.c  config.c  console.c  control.c  flash_programmer.c  freq_meter.c  init.c  scheduler.c  startup_lpc54618.c  time.c
boards/china_stm32f103c8t6/: building.cmake  oocd_jlink.cfg
boards/china_stm32f103c8t6/include/: config.h  console.h  drivers.h  spi.h  stm32f1xx_it.h  utils.h
boards/china_stm32f103c8t6/source/: communication.c  config.c  console.c  scheduler.c  spi.c  startup_stm32f103xb.c  utils.c
boards/china_stm32f103c8t6/usb/: main.c
boards/china_stm32f103c8t6/usblib/: usb_core.c  usb_init.c  usb_int.c  usb_lib.h  usb_mem.c  usb_regs.c  usb_sil.c
boards/china_stm32f407vet6/: oocd_armtinyh.cfg  oocd_ftdi2232h_jtag.cfg  oocd_ftdi2232h_swd.cfg  oocd_jlink.cfg  oocd_jlink_jtag.cfg  oocd_jlink_swd.cfg  stm32f4x.cfg
boards/cpe_stm32f030r8t6/: building.cmake  oocd_jlink.cfg  oocd_stlinkv2-1.cfg
boards/cpe_stm32f030r8t6/include/: drivers.h  gpio.h  i2c.h  spi.h  stm32f3xx_it.h
boards/cpe_stm32f030r8t6/source/: config.c  console.c  delay.c  gpio.c  i2c.c  init.c  pwm.c  scheduler.c  startup_stm32f030r8t6.c
boards/dbs/: building.cmake  oocd_jlink.cfg  oocd_stlinkv2.cfg
boards/dbs/include/: config.h
boards/dbs/source/: console.c  init.c  main.c
boards/dbs/usb_device/: usb_device.c  usb_device.h  usbd_cdc_if.c  usbd_conf.c  usbd_conf.h
boards/depo_baikalbmc/: building.cmake  oocd_jlink.cfg  oocd_stlinkv2.cfg
boards/depo_baikalbmc/include/: config.h  drivers.h
boards/depo_baikalbmc/source/: console.c  init.c  platform.c
boards/depo_baikalbmc/usb_device/: usb_device.c  usb_device.h  usbd_cdc_if.c  usbd_cdc_if.h  usbd_conf.c  usbd_desc.c  usbd_desc.h
boards/depo_mdr32f9/: building.cmake  flash_mdr32f9.ld  fprog_building.cmake  fprog_mdr32f9.ld  oocd_jlink.cfg
boards/depo_mdr32f9/include/: config.h  drivers.h
boards/depo_mdr32f9/source/: communication.c  config.c  console.c  flash_programmer.c  init.c  spi.c  startup_MDR32F9Qx.c  stm32f1xx_it.c  utils.c
boards/devusb_stm32f103c8t6/: building.cmake  oocd_jlink.cfg
boards/devusb_stm32f103c8t6/include/: communication.h
boards/devusb_stm32f103c8t6/source/: communication.c  console.c  i2c.c  init.c  spi.c  startup_stm32f103xb.c
boards/hostusb_mdr32f9/: building.cmake  fprog_building.cmake  oocd_jlink.cfg
boards/hostusb_stm32f103c8t6/: building.cmake  oocd_jlink.cfg
boards/imx8m/: .gdbinit  README.md  building.cmake  flash_imx8m.ld  run-autobuild.sh  run-debugger.sh  run-qemu.sh
boards/nucleo_stm32f303k8t6/: building.cmake
boards/nucleo_stm32f401ret6u/: building.cmake  oocd_stlinkv2.cfg
boards/psu_hs_stm32f030f4p6/: building.cmake  oocd_jlink.cfg  oocd_stlinkv2.cfg
boards/psu_ls_stm32f030c6t6/: building.cmake  flash.ld  oocd_jlink.cfg  oocd_stlinkv2.cfg
boards/psu_stm32f030r8t6/: building.cmake  oocd_jlink.cfg  oocd_stlinkv2-1.cfg  oocd_stlinkv2.cfg
boards/pulsox_stm32l4r9aii6u/: _flash.ld  building.cmake  oocd_jlink.cfg  oocd_stlinkv2-1.cfg
boards/som-carrier/: avrtiny.x  building.cmake
boards/stellaris_lm4f120h5qr/: building.cmake  debug.sh  flash_tm4c1233h6pm.ld  oocd_ftdi2232h_jtag.cfg  oocd_ti-icdi.cfg
boards/x86/: .gdbinit  README.md  bios-region-prepare.sh  bochsrc.cfg  building.cmake  create-bios-section.sh  create-hw-image.sh  make_external_code.sh  mkimage.sh  replace_bios_region.sh  run-autobuild.sh  run-bochs.sh  run-debugger.sh  run-qemu.sh  script.ld  setup-binary-table.sh  substitute.sh  substitution.map
include/: altimuv4.h  cobs.h  config.h  console.h  context.h  debug.h  delay.h  i2c.h  i2c_trans.h  init.h  kbmsusb.h  main.h  max3421e.h  ptr_container.h  scheduler.h  spi.h  spi_flash.h  stm32f3xx_it.h  time.h  usart1.h  utils.h
source/: altimuv4.c  baikalbmc_main.c  checkboard_main.c  cobs.c  config.c  console.c  context.c  cpe_main.c  debug.c  depo_baikalbmc.c  depo_mdr32f9.c  devusb_main.c  ds3231m.c  gpio.c  hostusb_main.c  i2c.c  ina3221.c  kbmsusb.c  max3421e.c  nmi_handler.c  nucleo_main.c  nucleo_stm32f401ret6u.c  psu_hs_main.c  psu_ls_main.c  psu_main.c  ptr_container.c  pulsox_main.c  small_china_main.c  spi_flash.c  stellaris_main.c  stm_bluepill_main.c  stm_hostusb_main.c
source/stm32f4/: i2c_trans.c
src/: config.c  console.c  main.c  scheduler.c  usart1.c
(+3263 files in other folders)
